[gd_scene load_steps=5 format=2]

[ext_resource path="res://Box.gd" type="Script" id=1]
[ext_resource path="res://assets/PNG/Other/blockBrown.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 32 )

[node name="Box" type="KinematicBody2D" groups=[
"box",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Area2DLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLeft"]
position = Vector2( -23, 0 )
shape = SubResource( 2 )

[node name="Area2DRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DRight"]
position = Vector2( 23, 0 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Area2DLeft" to="." method="_on_Area2DLeft_body_entered"]
[connection signal="body_exited" from="Area2DLeft" to="." method="_on_Area2DLeft_body_exited"]
[connection signal="body_entered" from="Area2DRight" to="." method="_on_Area2DRight_body_entered"]
[connection signal="body_exited" from="Area2DRight" to="." method="_on_Area2DRight_body_exited"]
